--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -20,7 +20,7 @@
 
 <h1>Register form</h1>
 <!--/*@thymesVar id="user" type="com.rubincomputers.sb_demo01.dto.UserDTO"*/-->
-<span th:text="${userRegistrationDTO}"/>
+<span th:text="${userFormDTO}"/>
 
 <h2>status is</h2>
 <!--<span th:text="${status.error}"/>-->
@@ -50,7 +50,7 @@
 
 
 
-<form th:object="${userRegistrationDTO}" th:action="@{/admin/users/register}" method="post">
+<form th:object="${userFormDTO}" th:action="@{/admin/users/register}" method="post">
     <div class="form-group">
         <label for="firstName">First Name:</label>
         <input type="text" id="firstName" th:field="*{firstName}" class="form-control" />
