moved dto to UserMapper

--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -19,7 +19,7 @@
 
 
 <h1>Register form</h1>
-<!--/*@thymesVar id="user" type="com.rubincomputers.sb_demo01.dto.UserDTO"*/-->
+<!--/*@thymesVar id="user" type="com.rubincomputers.sb_demo01.service.dto.UserDTO"*/-->
 <span th:text="${userFormDTO}"/>
 
 <h2>status is</h2>
