--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -42,7 +42,7 @@ Page=
 <table border="1">
 
 
-    <!--/*@thymesVar id="user" type="com.rubincomputers.sb_demo01.dto.UserDTO"*/-->
+    <!--/*@thymesVar id="user" type="com.rubincomputers.sb_demo01.service.dto.UserDTO"*/-->
     <tr th:each="user : ${users.content}">
 
 
