--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -66,7 +66,7 @@ Page=
 
         <th:block th:with="uri=${uri.endsWith('/') ? #strings.substring(uri, 0, #strings.length(uri) - 1) : uri}">
             <td><a th:href="
-            ${uri} + '/delete/' + ${user.id} +
+            ${uri} + '/edit/' + ${user.id} +
             ${page !=null ? '?' : ''} +
             ${page !=null ? 'page=' + page : ''} +
             ${size !=null ? '&size=' + size : ''} +
