--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -6,8 +6,12 @@
     <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
+
+
+
+
 <h1>User</h1>
-<!--/*@thymesVar id="user" type="com.rubincomputers.sb_demo01.dto.UserDTO"*/-->
+<!--/*@thymesVar id="user" type="com.rubincomputers.sb_demo01.service.dto.UserDTO"*/-->
 <span th:text="${user}"/>
 
 <table border="1">
