--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -9,6 +9,15 @@
 </head>
 <body th:with="uri=${#httpServletRequest.requestURI}, page=${param.page}, size=${param.size}, sort=${param.sort}">
 
+<script>
+    const urlParams = new URLSearchParams(window.location.search);
+    const status = urlParams.get('status');
+    const email = urlParams.get('email');
+    if (status=='ok'){
+        alert("User has been registered with email " + email)
+    }
+</script>
+
 uri before
 <p th:text="${uri}">URI Variable</p>
 
@@ -39,10 +48,13 @@ Page=
 <!-- https://www.baeldung.com/thymeleaf-variables -->
 
 
+<!--<h2><a th:href="${'/admin/users/register'+ ( (param.page != null) ? '?page=' + param.page + '&size=' + param.size + '&sort=' + param.sort : '') }">Add new User</a></h2>-->
+<h2><a th:href="${'/admin/users/register'+ ( (page!=null ) ? '?page=' + page + '&size=' + size + '&sort=' + sort : ''  ) }">Add new User</a></h2>
+
 <table border="1">
 
 
-    <!--/*@thymesVar id="user" type="com.rubincomputers.sb_demo01.dto.UserDTO"*/-->
+    <!--/*@thymesVar id="user" type="com.rubincomputers.sb_demo01.service.dto.UserDTO"*/-->
     <tr th:each="user : ${users.content}">
 
 
@@ -62,6 +74,16 @@ Page=
             ${size !=null ? '&size=' + size : ''} +
             ${sort !=null ? '&sort=' + sort : ''}
         ">Delete</a></td>
+        </th:block>
+
+        <th:block th:with="uri=${uri.endsWith('/') ? #strings.substring(uri, 0, #strings.length(uri) - 1) : uri}">
+            <td><a th:href="
+            ${uri} + '/edit/' + ${user.id} +
+            ${page !=null ? '?' : ''} +
+            ${page !=null ? 'page=' + page : ''} +
+            ${size !=null ? '&size=' + size : ''} +
+            ${sort !=null ? '&sort=' + sort : ''}
+        ">Edit</a></td>
         </th:block>
 
     </tr>
